修改文件: about.html

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is BY Qiu."
+description: "Hey"
 header-img: "img/home-bg-o.jpg"
 ---
 春风十里不如你
